--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Hello World</title>
+<title>Hello World :)</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>This is a Heading for April Kim's <strong>Graphic Design for the Web</strong> exercises</h1>
+<p>This is a paragraph created for Exercise 1.</p>
 <a href="exercise2.html">Exercise 2</a>
 
 </body>
