--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>This is a Heading for April Kim's <strong>Graphic Design for the Web</strong> exercises</h1>
-<p>This is a paragraph created for Exercise 1.</p>
+<h1>This is a Heading for April Kim's Graphic Design for the Web exercises</h1>
+<p>This is a paragraph created for Exercise 1: Index.</p>
 <a href="exercise2.html">Exercise 2</a>
 
 </body>
