--- a/exercise2.html
+++ b/exercise2.html
@@ -6,20 +6,24 @@
         <title>Mark Up Carl Dair</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
     	
+    	<br>
+    	<a href="index.html">Back to Index</a>
+
     	<h1>Seven Principles of Typographic Contrast</h1>
     	
     	<p>In a seminal booklet that he both designed and wrote, Carl Dair showed how in typography, as in music, harmony and contrast are the keys to composition.</p>
 
 		<h3>Written by John D. Berry</h3>
 
-		<p>The late Canadian typographer Carl Dair was one of the great typographic designers of the 1950s and 1960s, and he may have been the best of them all at explaining the nature of typography. In coordinated projects that he both wrote and designed, he managed to describe -- and show -- the ways in which manipulating and using type make typography happen.</p>
+		<p>The late Canadian typographer <span style="color:blue">Carl Dair</span> was one of the great typographic designers of the 1950s and 1960s, and he may have been the best of them all at explaining the <span style="font-style:italic;">nature of typography</span>. In coordinated projects that he both wrote and designed, he managed to describe -- and show -- the ways in which manipulating and using type make typography happen.</p>
 
 		<p>Dair is the very epitome of what I mean when I say "typographer": someone who designs with type, not just a fancy typesetter, but someone who uses type, in all its variations, as the principle element of design. Since type carries meaning, the practice of typography requires a designer who cares about the words themselves. It requires someone who cares enough, and is skillful enough, to make the type express that meaning, rather than serve as simply eye-catching decoration.</p>
 
-		<p>Carl Dair's book "Design With Type" (originally published in 1952; revised and expanded in 1967) is deservedly still in print, even though the technology that he used and described has long been outdated. The practicalities of setting type in metal are no longer the practicalities we have to deal with; but the visual relationships between letters, which Dair showed and explained so graphically in his book, haven't changed at all. "Design With Type" is still one of the best handbooks available for learning how to do exactly what the title says: design with type.</p>
+		<p>Carl Dair's book "Design With Type" (originally published in 1952; revised and expanded in 1967) is deservedly still in print, even though the technology that he used and described has long been outdated. The practicalities of setting type in metal are no longer the practicalities we have to deal with; but the visual relationships between letters, which Dair showed and explained so graphically in his book, haven't changed at all. <span style="color:blue">"Design With Type"</span> is still one of the best handbooks available for learning how to do exactly what the title says: design with type.</p>
 
 		<p>At around the same time he was revising his book, Carl Dair was producing a series of six pamphlets for West Virginia Pulp and Paper (Westvaco), which he called "A Typographic Quest." Each booklet was, naturally, printed on Westvaco paper stock; like the lavish paper-company samples produced today, this series was meant to raise the profile of the manufacturer and encourage designers to think of Westvaco when specifying paper for their printing jobs. But these were quite modest productions: little saddlestitched booklets of about 30 pages, measuring 5-1/4 inches by 9, usually printed in two colors (the first one uses three colors throughout; the later ones are two-color, although the second color may change from sheet to sheet, with all three colors used together on the covers). The first "A Typographic Quest" was published in 1964; the sixth (and, as far as I know, final) came out in 1968, the year Carl Dair died. Since he was both writer and designer for the series, each of the booklets emerged as a wholly crafted object, dedicated to explaining one or another aspect of using type.</p>
 
@@ -82,5 +86,9 @@
 		<p>Finally, Dair takes time to say a little about rhythm ("in typography, it consists of intervals of space") and about the power of "interrupted rhythm" ("the impact derives not from the fact that the unexpected happens, but rather that the expected does not happen").</p>
 
 		<p>Most of the time, we use more than one kind of contrast together, in order to make the differences between visual elements even more obvious. We can use all of Dair's seven kinds of contrast at once, if we're skillful; he refers to this as typographic "chords." (One of the chapter titles in "Design With Type" is "Multiplying the Contrasts.") But breaking them down like this into simple oppositions makes it easier to use them consciously; it keeps us from getting our layouts all muddied up through trying to change too many things at once without thinking about what we're doing. I've found Carl Dair's analysis of typographic contrast -- and especially the visual flair with which he presents it -- an invaluable tool in the practice of graphic design.</p>
+
+		<br>
+		<br>
+
     </body>
 </html>
