--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 </head>
 <body>
 
-<h1>This is a Heading for April Kim's Graphic Design for the Web exercises</h1>
+<h1>April Kim's Graphic Design for the Web Assignments</h1>
 <p>This is a paragraph created for Exercise 1: Index.</p>
 <p><a href="exercise2.html">Exercise 2</a> is stylized for Exercise 3.</p>
 <p><a href="project2/project2.html">Project 2</a></p>
+<p><a href="exercise7.html">Exercise 7</a></p>
+
 </body>
 </html>
