--- a/exercise7.html
+++ b/exercise7.html
@@ -1,17 +1,73 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Exercise 7 Trial</title>
+		<title>Exercise 7</title>
 	</head>
+
 	<body>
-		<p><span id="noun1"></span> is <span id="adj"></span>er than <span id="noun2"></span></p>
-		<script>
-			var x = "red";
-			var y = "blue";
-			var z = "yellow";
-			document.getElementById('noun1').innerHTML = x;
-			document.getElementById('noun2').innerHTML = y;
-			document.getElementById('adj').innerHTML = z;
+
+		<style>
+			body {
+				font-size: 4rem;
+			}
+			.list1 {
+				color: red;
+			}
+			.list2 {
+				color: blue;
+			}
+			.list3 {
+				color: purple;
+			}
+		</style>
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+		<p>
+			<span class="list1"></span> is <span class="list3"></span>er than <span class="list2"></span>.
+		</p>
+
+		<script type="text/javascript">
+			$(document).ready(function() {
+			
+				/* 1. Make an array of words */
+				var noun1 = ["black", "water", "photo", "phone", "honey"];
+				var noun2 = ["grey", "fire", "screenshot", "laptop", "salt"];
+				var adj = ["dark", "cool", "sharp", "light", "sweet"];
+
+
+				/* 2. Take each array and pick at word at random */
+				function pickRandomWord(x){
+					y = x[Math.floor(Math.random()*x.length)];
+					return y;
+				}
+
+				/* 3. Print a random word from the arry on the browser */
+				function printRandomWord() {
+					
+					/* Call the function from step 2 for each list */
+					var list_noun1 = pickRandomWord(noun1);
+					var list_noun2 = pickRandomWord(noun2);
+					var list_adj = pickRandomWord(adj);
+
+					/* Print the selected word from list on the browser */
+					$('.list1').html(list_noun1);
+					$('.list2').html(list_noun2);
+					$('.list3').html(list_adj);
+				}
+
+				// Call the function when the html page is initially loaded
+				printRandomWord();
+
+				//Call the function when a user licks a button
+				$('button').click(function(){
+					printRandomWord();
+
+				});
+			});
 		</script>
+
+		<button>Generate</button>
+
 	</body>
 </html>
