--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h1>April Kim's Graphic Design for the Web Assignments</h1>
 <p>This is a paragraph created for Exercise 1: Index.</p>
-<p><a href="exercise2.html">Exercise 2</a> is stylized for Exercise 3.</p>
+<p><a href="exercise2.html">Exercise 2</a> is stylized through Exercise 3.</p>
 <p><a href="project2/project2.html">Project 2</a></p>
 <p><a href="exercise7.html">Exercise 7</a></p>
 
