--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
 </head>
 <body>
 
-<h1>April Kim's Graphic Design for the Web Assignments</h1>
-<p>This is a paragraph created for Exercise 1: Index.</p>
-<p><a href="exercise2.html">Exercise 2</a> is stylized through Exercise 3.</p>
-<p><a href="project2/project2.html">Project 2</a></p>
+<h1>April Kim <br> Graphic Design for the Web</h1>
+<br>
+<p>This index was created for Exercise 1.</p>
+<p><a href="exercise2.html">Exercise 2</a> was stylized for Exercise 3.</p>
+<p>Exercise 4</p>
+<p>Exercise 5</p>
+<p><a href="project2/project2.html">PROJECT 2</a></p>
+<p>Exercise 6</p>
 <p><a href="exercise7.html">Exercise 7</a></p>
 
 </body>
