--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Hello World :)</title>
+	<title>Hello World :)</title>
 </head>
+
 <body>
-
-<h1>April Kim <br> Graphic Design for the Web</h1>
-<br>
-<p>This index was created for Exercise 1.</p>
-<p><a href="exercise2.html">Exercise 2</a> was stylized for Exercise 3.</p>
-<p>Exercise 4</p>
-<p>Exercise 5</p>
-<p><a href="project2/project2.html">PROJECT 2</a></p>
-<p>Exercise 6</p>
-<p><a href="exercise7.html">Exercise 7</a></p>
-
+	<h1>April Kim <br> Graphic Design for the Web</h1>
+	<br>
+	<p>This index was created for Exercise 1.</p>
+	<p><a href="exercise2.html">Exercise 2</a> was stylized for Exercise 3.</p>
+	<p><a href='./exercise4/chessboard.html'>Exercise 4.1</a></p>
+	<p>Exercise 5</p>
+	<p><a href="project2/project2.html">PROJECT 2</a></p>
+	<p>Exercise 6</p>
+	<p><a href="exercise7.html">Exercise 7</a></p>
 </body>
 </html>
