--- a/exercise7.html
+++ b/exercise7.html
@@ -6,9 +6,15 @@
 
 	<body>
 
+		<br>
+		<p><a href="index.html">Back to Index</a></p>
+
 		<style>
-			body {
+			h1 {
 				font-size: 4rem;
+			}
+			p {
+				font-size: 18px;
 			}
 			.list1 {
 				color: red;
@@ -23,9 +29,9 @@
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-		<p>
+		<h1>
 			<span class="list1"></span> is <span class="list3"></span>er than <span class="list2"></span>.
-		</p>
+		</h1>
 
 		<script type="text/javascript">
 			$(document).ready(function() {
