--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<p><a href="exercise2.html">Exercise 2</a> was stylized for Exercise 3.</p>
 	<p><a href='./exercise4/chessboard.html'>Exercise 4.1</a></p>
 	<p><a href='./exercise4/3columngrid.html'>Exercise 4.2</a></p>
-	<p>Exercise 4.3</p>
+	<p><a href='./exercise4/bloglayout.html'>Exercise 4.3</a></p>
 	<p>Exercise 4.4</p>
 	<p>Exercise 5</p>
 	<p><a href="project2/project2.html">PROJECT 2</a></p>
