--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<p><a href='./exercise4/chessboard.html'>Exercise 4.1</a></p>
 	<p><a href='./exercise4/3columngrid.html'>Exercise 4.2</a></p>
 	<p><a href='./exercise4/bloglayout.html'>Exercise 4.3</a></p>
-	<p>Exercise 4.4</p>
+	<p><a href="./exercise4/bars.html">Exercise 4.4</a></p>
 	<p>Exercise 5</p>
 	<p><a href="project2/project2.html">PROJECT 2</a></p>
 	<p>Exercise 6</p>
