--- a/exercise2-3/exercise2.html
+++ b/exercise2-3/exercise2.html
@@ -6,12 +6,11 @@
         <title>Mark Up Carl Dair</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" type="text/css" href="./exercise2-3/exercise3.css" />
     </head>
     <body>
     	
     	<br>
-    	<a href="index.html">Back to Index</a>
 
     	<h1>Seven Principles of Typographic Contrast</h1>
     	
