--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<h1>April Kim <br> Graphic Design for the Web</h1>
 	<br>
 	<p>This index was created for Exercise 1.</p>
-	<p><a href="exercise2.html">Exercise 2</a> was stylized for Exercise 3.</p>
+	<p><a href="./exercise2-3/exercise2.html">Exercise 2</a> was stylized for Exercise 3.</p>
 	<p><a href='./exercise4/chessboard.html'>Exercise 4.1</a></p>
 	<p><a href='./exercise4/3columngrid.html'>Exercise 4.2</a></p>
 	<p><a href='./exercise4/bloglayout.html'>Exercise 4.3</a></p>
