--- a/project2/project2.html
+++ b/project2/project2.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+	<p><a href="../index.html">Back to Index</a></p>
 	<br>
 	<h1>Portfolio 75</h1>
 	<p>This is an online archive of Portfolio 75, a found physical copy of the RISD yearbook, class of 1975.</p>
