--- a/exercise4/bars.html
+++ b/exercise4/bars.html
@@ -112,6 +112,9 @@
 </head>
 
 <body>
+    <p><a href="../index.html">Back to Index</a></p>
+    <br>
+    
     <div class="bar1"></div>
     <div class="bar2"></div>
     <div class="bar3"></div>
