--- a/exercise5-6/exercise5.html
+++ b/exercise5-6/exercise5.html
@@ -128,6 +128,8 @@
 	</head>
 
 	<body>
+		<p><a href="../index.html">Back to Index</a></p>
+		<br>
 
 		<div class="circle1"></div>
 		<div class="circle2"></div>
