--- a/exercise5-6/exercise5.html
+++ b/exercise5-6/exercise5.html
@@ -2,149 +2,35 @@
 <html>
 	<head>
 		<title>Exercise 5</title>
-		
-		<style type="text/css">
-			.circle1 {
-				width: 200px;
-				height: 200px;
-				background: orange;
-				border-radius: 100px;
-				position: absolute;
-				top: 100px;
-				left: 100px;
-			}
-			.circle2 {
-				width: 100px;
-				height: 100px;
-				background: beige;
-				border-radius: 50px;
-				position: absolute;
-				top: 150px;
-				left: 150px;
-			}
-			.rectangle1 {
-				width: 50px;
-				height: 200px;
-				background: dodgerblue;
-				position: absolute;
-				top: 100px;
-				left: 300px;
-			}
-			.triangle1 {
-				width: 0;
-				height: 0;
-				border-left: 100px solid transparent;
-				border-right: 100px solid transparent;
-				border-bottom: 200px solid dodgerblue;
-				position: absolute;
-				top: 100px;
-				left: 400px;
-			}
-			.rectangle2 {
-				width: 200px;
-				height: 50px;
-				background: orange;
-				position: absolute;
-				top: 190px;
-				left: 400px;
-			}
-			.rectangle3 {
-				width: 200px;
-				height: 200px;
-				background: orange;
-				position: absolute;
-				top: 100px;
-				left: 650px;
-			}
-			.rectangle4 {
-				width: 100px;
-				height: 50px;
-				background: dodgerblue;
-				position: absolute;
-				top: 150px;
-				left: 700px;
-			}
-			.rectangle5 {
-				width: 100px;
-				height: 50px;
-				background: beige;
-				position: absolute;
-				top: 250px;
-				left: 700px;
-			}
-			.rectangle6 {
-				width: 200px;
-				height: 200px;
-				background: dodgerblue;
-				position: absolute;
-				top: 100px;
-				left: 900px;
-			}
-			.circle3 {
-				width: 50px;
-				height: 50px;
-				background: beige;
-				border-radius: 25px;
-				position: absolute;
-				top: 140px;
-				left: 975px;
-			}
-			.circle4 {
-				width: 100px;
-				height: 75px;
-				background: orange;
-				border-radius: 25px;
-				position: absolute;
-				top: 225px;
-				left: 950px;
-			}
-			.circle5 {
-				width: 200px;
-				height: 200px;
-				background: orange;
-				border-radius: 100px;
-				position: absolute;
-				top: 100px;
-				left: 1150px;
-			}
-			.rectangle7 {
-				width: 150px;
-				height: 50px;
-				background: beige;
-				position: absolute;
-				top: 150px;
-				left: 1125px;
-			}
-			.circle6 {
-				width: 50px;
-				height: 50px;
-				background: dodgerblue;
-				border-radius: 25px;
-				position: absolute;
-				top: 225px;
-				left: 1225px;
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="./exercise6.css" />
 	</head>
 
 	<body>
 		<p><a href="../index.html">Back to Index</a></p>
 		<br>
 
+		<!--A1-->
 		<div class="circle1"></div>
 		<div class="circle2"></div>
 		<div class="rectangle1"></div>
+		<!--A2-->
 		<div class="triangle1"></div>
 		<div class="rectangle2"></div>
+		<!--A3-->
 		<div class="rectangle3"></div>
 		<div class="rectangle4"></div>
+		<div class="rectangle4-2"></div>
 		<div class="rectangle5"></div>
+		<!--A4-->
 		<div class="rectangle6"></div>
 		<div class="circle3"></div>
 		<div class="circle4"></div>
+		<div class="circle4-2"></div>
+		<!--A5-->
 		<div class="circle5"></div>
 		<div class="rectangle7"></div>
 		<div class="circle6"></div>
+		<div class="circle6-2"></div>
 
 	</body>
 
