--- a/project2/project2.html
+++ b/project2/project2.html
@@ -3,7 +3,7 @@
 
 <head>
 	<link href="./style2.css" type="text/css" rel="stylesheet">
-	<title>Portfolio 75</title>
+	<title>Project 2 — Portfolio 75</title>
 </head>
 
 <body>
