--- a/project3/project3.html
+++ b/project3/project3.html
@@ -2,7 +2,23 @@
 <html>
 
 <head>
+	<link rel="stylesheet" type="text/css" href="./project3style.css" />
 	<title>Project 3 — Sinking</title>
 </head>
+
+<body bgcolor="#f5bf95">
+
+	<div class="wall1"></div>
+	<div class="wall2"></div>
+	<div class="shadow"></div>
+	<div class="textbox"></div>
+	<h1>According to the GPS and salt marsh core data, Rhode Island has been sinking at a rate of 1mm per year. Recent sea level projections indicate seas could rise 7-11 feet by the year 2100.
+	<br><br>
+	The water surface on this page shows how much the sea level has increased since 2019 in real time.</h1>
+	<div class="water"></div>
+	<h2>2019 + 9 feet</h2>
+	<h3>2019</h3>
+
+</body>
 
 </html>
