--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 	<p><a href="./exercise5-6/exercise5.html">Exercise 5 & 6</a></p>
 	<p><a href="project2/project2.html">PROJECT 2</a></p>
 	<p><a href="exercise7.html">Exercise 7</a></p>
+	<p><a href="./project3/project3.html"></a>PROJECT 3</p>
 </body>
 </html>
