--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 	<p><a href="project2/project2.html">PROJECT 2</a></p>
 	<p><a href="exercise7.html">Exercise 7</a></p>
 	<p><a href="./project3/project3.html"></a>PROJECT 3</p>
+	<p><a href="./project3-short/project3-short.html"></a>PROJECT 3 (SHORT)</p>
 </body>
 </html>
