--- a/project3-short/project3-short.html
+++ b/project3-short/project3-short.html
@@ -2,12 +2,17 @@
 <html>
 
 <head>
-	<title>Sinking Rhode Island</title>
-	<link rel="stylesheet" type="text/css" href="./project3style.css" />
-	<script type="text/javascript" src="project3.js"></script>
+	<link rel="stylesheet" type="text/css" href="./project3style-short.css" />
+	<title>Project 3 — Sinking PVD</title>
 </head>
 
 <body>
+
+	<!--
+	<div class="wall1"></div>
+	<div class="wall2"></div>
+	<div class="shadow"></div>
+	-->
 	
 	<div class="textbox">
 		<h1 data-text="According to the GPS and salt marsh core data, Rhode Island has been sinking at a rate of 1mm per year. Recent sea level projections indicate seas could rise 7-11 feet by the year 2100.
@@ -15,11 +20,7 @@
 		The water surface on this page shows how much the sea level has increased since 2019 in real time."></h1>
 	</div>
 
-	<div id="waterLevel"></div>
-
-	<!--
-		<div class="water"></div>
-	-->
+	<div class="water"></div>
 	<h2>2100</h2>
 	<h3>2019</h3>
 
