--- a/project3-short/project3-short.html
+++ b/project3-short/project3-short.html
@@ -3,7 +3,7 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="./project3style-short.css" />
-	<title>Project 3 — Sinking PVD</title>
+	<title>Sinking Rhode Island</title>
 </head>
 
 <body>
