--- a/project3/project3.html
+++ b/project3/project3.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<title>Sinking Rhode Island</title>
-	<link rel="stylesheet" type="text/css" href="./project3style.css" />
-	<script type="text/javascript" src="project3.js"></script>
+	<link rel="stylesheet" type="text/css" href="project3style.css" />
 </head>
 
 <body>
-	
+
+	<div class="textbox-back"></div>
 	<div class="textbox">
-		<h1 data-text="According to the GPS and salt marsh core data, Rhode Island has been sinking at a rate of 1mm per year. Recent sea level projections indicate seas could rise 7-11 feet by the year 2100.
-		
-		The water surface on this page shows how much the sea level has increased since 2019 in real time."></h1>
+		<h1>According to the GPS and salt marsh core data, Rhode Island has been sinking at a rate of 1mm per year. Recent sea level projections indicate seas could rise 7-11 feet by the year 2100.
+		<br>
+		The water surface on this page shows how many inches the sea level would have increased over the next 80 years, from 2019 to 2099.</h1>
 	</div>
 
-	<div id="waterLevel"></div>
+	<div class="waterLevel"></div>
 
-	<!--
-		<div class="water"></div>
-	-->
-	<h2>2100</h2>
-	<h3>2019</h3>
+	<div class="year-2109"></div>
+	<div class="year-2099"><h2>2099</h2></div>
+	<div class="year-2089"><h2>2089</h2></div>
+	<div class="year-2079"><h2>2079</h2></div>
+	<div class="year-2069"><h2>2069</h2></div>
+	<div class="year-2059"><h2>2059</h2></div>
+	<div class="year-2049"><h2>2049</h2></div>
+	<div class="year-2039"><h2>2039</h2></div>
+	<div class="year-2029"><h2>2029</h2></div>
+	<div class="year-2019"><h2>2019</h2></div>
+
+	<div class="reload"><h3><a href="project3.html">RELOAD</a></h3></div>
 
 </body>
 
