--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 <head>
 	<title>Academic Purposes</title>
+	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
 	<br>
-	<h1>April Kim's Repository for Academic Purposes</h1>
+	<div class="purpose">
+		<h1>April Kim's Repository for Academic Purposes</h1>
+	</div>
 </body>
 </html>
